--- a/src/classes/CadenceScheduler.cls
+++ b/src/classes/CadenceScheduler.cls
@@ -2,13 +2,17 @@ global class CadenceScheduler implements schedulable{
     // Next schedule time must be in minutes
     public static Integer nextScheduleTime  = 15;
     global void execute(SchedulableContext SC) {
-        // Schedule batch for Contact
-        PerformCadenceActionBatch con=new PerformCadenceActionBatch(CadenceConstants.CONTACT_OBJECT_NAME);
-        Database.executeBatch(con,200);
-        // Schedule batch for lead
-        PerformCadenceActionBatch led=new PerformCadenceActionBatch(CadenceConstants.LEAD_OBJECT_NAME);
-        Database.executeBatch(led,200);
-        // Schedule next cadence scheduler
+        Integer runningBatch = CadenceUtil.getAllRunningBatch();
+        if (runningBatch == 0){
+            // Schedule batch for Contact
+            PerformCadenceActionBatch con=new PerformCadenceActionBatch(CadenceConstants.CONTACT_OBJECT_NAME);
+            Database.executeBatch(con,1000);
+            // Schedule batch for lead
+            PerformCadenceActionBatch led=new PerformCadenceActionBatch(CadenceConstants.LEAD_OBJECT_NAME);
+            Database.executeBatch(led,1000);
+            // Schedule next cadence scheduler
+        }
         CadenceUtil.scheduleNextCadenceScheduler(nextScheduleTime);
+        // We also create a log if Batch is skipped.
     }
 }
